# iSentry

./: .env  .gitignore  README.md  index.html
ai/: Cargo.toml
ai/face-detection/: Cargo.toml
ai/face-detection/src/: dataset.rs  lib.rs  metric.rs  model.rs  training.rs
ai/face-recognition/: Cargo.toml
ai/src/: error.rs  ffmpeg.rs  job.rs  lib.rs  main.rs  utils.rs  video_processing.rs
ai/src/model/: bounding_box.rs  example.rs  identity.rs  indentity.rs  mod.rs  utils.rs
ai/src/model/handler/: auto_label.rs  mod.rs  process_image.rs  validate_face.rs
ai/src/web_server/: error.rs  handlers.rs  mod.rs  response.rs  routes.rs
ai/src/web_server/handler/: doorlock.rs  mod.rs  process_image.rs  subscribe_notif.rs  validate_face.rs
artifact/: config.json
backend/: .env.example  .gitignore  bun.lockb  package.json  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/prisma/routes/: UserRoutes.ts  index.ts
backend/src/: index.ts
camera/: pubspec.yaml
camera/lib/: main.dart
doorlock-IoT/webserver/: webserver.ino
doorlock-IoT/websocket-client/: websocket-client.ino
landing-page/: index.html
landing-page/css/: isentry-color.css  style.css
landing-page/js/: lightbox.min.js
live_camera/: README.md  pubspec.yaml
live_camera/lib/: main.dart
live_camera/web/: index.html
mobile/: README.md  pubspec.yaml
mobile/android/: build.gradle
mobile/lib/: bottomnav.dart  main.dart
mobile/linux/: CMakeLists.txt  my_application.cc
mobile/test/: widget_test.dart
mobile/windows/: CMakeLists.txt
scripts/: direnv.ps1  get-dependencies.ps1  media-server.ps1
(+147 files in other folders)
