
[package]
name = "ai"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
  "face-detection", 
  "face-recognition"
]

[dependencies]
axum = { version = "0.7.7", features = ["macros", "multipart"] }
axum-macros = "0.4.2"
chrono = "0.4.38"
dotenvy = "0.15.7"
eyre = "0.6.12"
face-detection = { path = "./face-detection/" }
image = "0.25.4"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "signal", "tracing", "process"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["v4"] }
